<resources>
    <string name="app_name">PHOTON</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="ndata">

        41\u00C2\u00B024\'12.2"N - 2\u00C2\u00B010\'26.5"E
    </string>
    <string name="forgot_pasw">Forgot Password?</string>
    <string name="check">

        Check
    </string>
    <string name="mapping_suc">

        Registration Successful --- 41\u00C2\u00B024\'12.2"N - 2\u00C2\u00B010\'26.5"E
    </string>
    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="residing">
        <item>Alive</item>
        <item>Dead</item>
        <item>Alive</item>
    </string-array>
    <string name="button">Login</string>
    <string name="digital_ind">Digital India!</string>
    <string name="one_village">One village at a time</string>
    <string name="lorem_ipsum">Karuna Trust provides Comprehensive Primary Health care services in the PHCs. With the Government
        of India backing the Digital India movement, there have been a lot of advancements in the technology
        front in health care.\n\nThe Mobile Apps embedded this Tab allow us to capture basic profiles of Residents,
        Household and Village. Mobile Apps for monitoring the complete
        workflow of RMNCH+A will allow us to integrate with PHC EMR Web App.
        Similarly the surveillance App will allow us to collect data of Communicable Disease and integrate with PHC EMR Web App.
    </string>
    <string name="powered_by_">Powered by: &lt;br /&gt; <b>SAMPOORNA SWARAJ FOUNDATION\u0020</b> &lt;br /&gt;Bangalore
    </string>
    <string name="powered_by">Powered by:/n SAMPOORNA SWARAJ FOUNDATION /n Bangalore
    </string>
    <string name="powered_by_sam">Powered by: &lt;br /&gt; <b>SAMPOORNA SWARAJ FOUNDATION\u0020</b> &lt;br /&gt;Bangalore
    </string>
    <string name="check_internet_connection">Check your internet connection.</string>
    <string name="deceased">Deceased</string>
    <string name="location_phc_here">Location /PHC Here</string>
    <string name="user_name_here">User Name Here</string>
    <string name="collected_reports">Collected Reports</string>
    <string name="surveillance">Surveillance</string>
    <string name="dashboard">Dashboard</string>
    <string name="what_are_yo">What are you doing today</string>
    <string name="select_surv">Select surveillance type</string>
    <string name="field_label_lang">Larva Surveillance at Household</string>
    <string name="others">Special/Others</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map_key" translatable="false">AIzaSyDyUTKZxc2pZObEoRD7C5bKJYW5OMIgcCs</string>
    <string name="village_level_mapping">Village Level Registration</string>
    <string name="household_level_mapping">Household Level Registration</string>
    <string name="village_level_survey">Village Level Survey</string>
    <string name="household_level_survey">Household Level Survey</string>
    <string name="resident_level_survey">Individual Level Survey</string>
    <string name="village_level">Village Level</string>
    <string name="household_level">Household Level</string>
    <string name="individual_level">Individual Level</string>
    <string name="villagename">

        | VillageName-123456-XX
    </string>
    <string name="villageinfo">

        Village Info
    </string>
    <string name="populationinhshld">

        Population in household
    </string>
    <string name="gram_panchayat_name">

        Gram Panchayat Name*
    </string>
    <string name="tauluk">

        Taluk*
    </string>
    <string name="district">

        District*
    </string>
    <string name="state">

        State*
    </string>
    <string name="revisits_follow_up">Revisits / Follow up</string>
    <string name="popup_heade">Select Village for &lt; Village Level Registration ></string>
    <string-array name="select_phc">
        <item>Sugganahalli Rural PHC</item>
    </string-array>
    <string name="phc">PHC</string>
    <string name="already_exist">Data already exists</string>
    <string name="cancel">Cancel</string>
    <string name="retry">Please Retry</string>
    <string name="start_mapping">Start Registration</string>
    <string name="submit">Submit</string>
    <string name="save">Save</string>
    <string name="select_village">Select Village</string>
    <string name="village">Village</string>
    <string name="select_subcenter">Select Sub-center</string>
    <string name="subcenter">Subcenter</string>
    <string name="existing_pr">Existing Primary Data</string>
    <string name="public_heal"><![CDATA[Public Health Center Name > Subcenter Number 1 > Mayasandra]]></string>
    <string name="complete_map">COMPLETE_MAPPING</string>
    <string name="incomplete">Save Incomplete</string>
    <string name="lgd_code_00">LGD CODE</string>
    <string name="smthwntwrng">Something went wrong</string>
    <string name="n_2_10_26_5">Please wait … getting GPS location</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_splash">SplashAct</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="name_of_the_asset">Name of the asset</string>
    <string name="lava_surveillance_at_village">Larva Surveillance at Village</string>
    <string name="urine_sample">Urine Sample</string>
    <string name="iec_programme">IEC Programme</string>
    <string name="water_sample_collection">Water Sample Collection</string>
    <string name="iodine_test">Iodine Test</string>
    <string name="what_survey_and_surveillance_is_required">What Surveillance is required</string>
    <string name="gps">GPS</string>
    <string name="hotel">Hotel</string>
    <string name="temple">Temple</string>
    <string name="mosque">Mosque</string>
    <string name="church">Church</string>
    <string name="office">Office</string>
    <string name="hospital">Hospital</string>
    <string name="construction">Construction</string>
    <string name="school_college">School</string>
    <string name="bus_stop">Bus Stop</string>
    <string name="water_body">Water Body</string>
    <string name="park">Park</string>
    <string name="toilet">Toilet</string>
    <string name="shop">Shop</string>
    <string name="other">Other</string>
    <string name="add_image">Add Image</string>
    <string name="back">Back</string>
    <string name="save_and_continue">Save And Continue</string>
    <string name="click_to_continue">Click here to Continue</string>
    <string name="subcenter_number_1">Subcenter Number 1</string>
    <string name="public_health_center_name">Public Health Center Name</string>
    <string name="mayasandra">Mayasandra</string>
    <string name="marked_places">Marked Places</string>
    <string name="_10">10</string>
    <string name="logout">Logout</string>
    <string name="logout1">
        <u>Logout</u>
    </string>
    <string name="select_survillance">Select Surveillance</string>
    <string name="hh_number_g">
        | HH-NUMBER- |
    </string>
    <string name="hh_number">HH-NUMBER
    </string>
    <string name="residing_status">Resident Status*</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="male">Male</string>
    <string name="border_main">Border Main</string>
    <string name="background">Background</string>
    <string name="ssf_logo">SSF Logo</string>
    <string name="karuna_trust_logo">Karuna Trust Logo</string>
    <string name="emptystring" />
    <string name="search_by_name">Search by Name</string>
    <string name="find_by_location">Find HH by GPS location</string>
    <string name="hh_number_header">Household Number</string>
    <string name="hh_head_name">Name of HH Head</string>
    <string name="hh_members">No. of Members</string>
    <string name="hh_action">Action</string>
    <string name="select_ec_hh">Select Eligible Couple Household</string>
    <string name="select_pw_for_anc">Select PW for Ante Natal Care</string>
    <string name="select_pw_for_pnc">Select PW for Post Natal Care</string>
    <string name="select_pw_for_anc_service">Select PW for ANC Service</string>
    <string name="select_pw_for_pnc_service">Select Woman for PNC Service</string>
    <string name="select_hh_for_anc">Select HH for Ante Natal Care</string>
    <string name="select_hh_for_pnc">Select HH for Post Natal Care</string>
    <string name="show_complete_list_of_hh">Show complete list of HH</string>
    <string name="hh_filter_header_message">Based on your location we found these Households</string>
    <string name="anc_pw_header_message">Here is a list of Pregnant Women</string>
    <string name="pnc_women_header_message">Here is a list of Women for Post Natal Care</string>
    <string name="anc_hh_header_message">Here is a list of Households</string>
    <string name="pnc_hh_header_message">Here is a list of Households</string>
    <string name="hh_filter_sub_header_message">Select a house for Eligible Couple Process</string>
    <string name="hh_select_female_for_ec_header_message">Select a Female Member for EC Process</string>
    <string name="hh_select_female_for_anc_header_message">Select a Female Member for Ante Natal Care</string>
    <string name="hh_select_female_for_pnc_header_message">Select a Female member for Post Natal Care</string>
    <string name="hh_start_service_or_select_female_header_message">Start Service or Select a Female for EC Registration</string>
    <string name="hh_select_spouse_header_message">Select Spouse for EC Registration</string>
    <string name="hh_select_spouse_for_ec_service_header_message">Provide Birth Control or Pre-Conception Service</string>
    <string name="hh_pnc_details_header_message">Enter Delivery Outcome Details and Infant Details</string>
    <string name="hh_pnc_delivery_outcomes_header_message">Enter Delivery Outcome Details</string>
    <string name="text_pnc_view_delivery_outcomes">View Delivery Outcome Details</string>
    <string name="text_pnc_view_infant_details">View Infant Details</string>
    <string name="hh_pnc_infant_header_message">Enter Infant Details</string>
    <string name="hh_pnc_service_header_message">Selection of Beneficiary for PNC services</string>
    <string name="hh_select_pw_anc_service_header_message">Register Pregnant Woman for Ante Natal Care Services</string>
    <string name="hh_select_pw_anc_tracking_header_message">Perform Periodic Medical Check-ups</string>
    <string name="hh_select_anc_hh_message">Selection of Households</string>
    <string name="hh_select_pnc_hh_message">Selection of Households</string>
    <string name="hh_select_pnc_women_message">Selection of Women for PNC</string>
    <string name="hh_select_pw_anc_message">Selection of PW for ANC</string>
    <string name="hh_select_spouse_header_with_rchid_message">Register EC for RCH - ID</string>
    <string name="hh_ec_process_header_message">Eligible Couple Process</string>
    <string name="hh_anc_header_message">Ante Natal Care</string>
    <string name="hh_pnc_header_message">Post Natal Care</string>
    <string name="hh_ec_provide_service_header_message">Provide BC or PC Service</string>
    <string name="hh_anc_pw_registration_header_message">Ante Natal care - PW Registration</string>
    <string name="hh_ec_choose_type_service_header_message">Choose The Type Of Service</string>
    <string name="hh_ec_update_service_status_header_message">Update Service Status</string>
    <string name="hh_you_are_in_village_message">You are in @@ Village for Eligible Couple Process</string>
    <string name="hh_anc_you_are_in_village_message">You are in @@ Village for Ante Natal Care</string>
    <string name="back_arrow">Back Arrow</string>
    <string name="mark_a_spot">Mark a spot</string>
    <string name="show_completed_list">Show Completed List</string>
</resources>