<?xml version="1.0" encoding="utf-8"?>
<layout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/village_level_mapping"
>
    <data>
        <import type="android.view.View"/>
    </data>

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:paddingHorizontal="10dp"
                android:layout_marginHorizontal="-15dp"
                android:orientation="horizontal">

            <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:text="@string/mark_a_spot"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textAppearance="@style/popup_heade" />

            <ImageView
                    android:layout_width="18dp"
                    android:layout_height="21dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="19dp"
                    android:id="@+id/ivClose"
                    app:srcCompat="@drawable/ic_close" />
        </RelativeLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/alert_divider"/>

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:padding="10dp"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <com.ssf.homevisit.views.GridRadioGroup
                        android:id="@+id/assetRadioGroup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                    <TableRow
                            android:layout_margin="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">
                        <RadioButton
                                android:id="@+id/radio_temple"
                                android:text="@string/temple"
                                style="@style/construction_radio_button"
                                android:foreground="@drawable/chevron11"/>
                        <RadioButton
                                android:id="@+id/radio_mosque"
                                android:text="@string/mosque"
                                android:foreground="@drawable/chevron12"
                                style="@style/construction_radio_button"
                        />
                        <RadioButton
                                android:id="@+id/radio_church"
                                android:text="@string/church"
                                android:foreground="@drawable/chevron13"
                                style="@style/construction_radio_button"
                        />
                        <RadioButton
                                android:id="@+id/radio_hotel"
                                android:text="@string/hotel"
                                android:foreground="@drawable/chevron14"
                                style="@style/construction_radio_button"
                        />
                        <RadioButton
                                android:id="@+id/radio_office"
                                android:textAlignment="gravity"
                                android:text="@string/office"
                                android:foreground="@drawable/chevron15"
                                style="@style/construction_radio_button"
                        />
                        <RadioButton
                                android:id="@+id/radio_hospital"
                                android:foreground="@drawable/chevron16"
                                android:text="@string/hospital"
                                style="@style/construction_radio_button"
                        />
                        <RadioButton
                                style="@style/construction_radio_button"
                                android:id="@+id/radio_construction"
                                android:text="@string/construction"
                                android:foreground="@drawable/chevron17"
                        />
                    </TableRow>
                    <TableRow
                            android:layout_margin="5dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                    >
                        <RadioButton
                                android:id="@+id/radio_education"
                                android:foreground="@drawable/chevron18"
                                android:text="@string/school_college"
                                style="@style/construction_radio_button"
                        />
                        <RadioButton
                                android:id="@+id/radio_busStop"
                                android:foreground="@drawable/chevron19"
                                android:text="@string/bus_stop"
                                style="@style/construction_radio_button"
                        />
                        <RadioButton
                                android:id="@+id/radio_waterBody"
                                android:foreground="@drawable/chevron20"
                                android:text="@string/water_body"
                                style="@style/construction_radio_button"
                        />
                        <RadioButton
                                android:id="@+id/radio_shop"
                                android:text="@string/shop"
                                android:foreground="@drawable/chevron21"
                                style="@style/construction_radio_button"
                        />
                        <RadioButton
                                android:id="@+id/radio_toilet"
                                android:text="@string/toilet"
                                android:foreground="@drawable/chevron22"
                                style="@style/construction_radio_button"
                        />
                        <RadioButton
                                android:id="@+id/radio_park"
                                android:text="@string/park"
                                android:foreground="@drawable/chevron23"
                                style="@style/construction_radio_button"
                        />
                        <RadioButton
                                android:id="@+id/radio_other"
                                android:text="@string/other"
                                android:foreground="@drawable/chevron24"
                                style="@style/construction_radio_button"
                        />

                    </TableRow>
                </com.ssf.homevisit.views.GridRadioGroup>
            </LinearLayout>
            <LinearLayout
                    android:orientation="horizontal"
                    android:textSize="11sp"
                    android:layout_marginTop="20dp"
                    android:gravity="center_vertical"
                    android:layout_width="match_parent"
                    android:layout_height="54dp">
                <TextView
                        android:minWidth="100dp"
                        android:layout_width="0dp"
                        android:text="@string/name_of_the_asset"
                        android:textSize="13.5sp"
                        android:layout_weight="1"
                        android:layout_marginEnd="14dp"
                        android:layout_height="wrap_content"
                        android:textColor="#4F4F4F"/>

                <EditText
                        android:id="@+id/editTextName"
                        android:layout_weight="3"
                        android:minWidth="150dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:textSize="13sp"
                        android:autoSizeMaxTextSize="13sp"
                        android:hint="@string/name_of_the_asset"/>

                <LinearLayout
                        android:layout_marginStart="10dp"
                        android:layout_weight="2"
                        android:minWidth="150dp"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/alert_phc_bg">

                    <Spinner
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/spinnerTypeOfAsset"
                            android:layout_marginStart="10dp"
                            android:gravity="center_vertical"/>
                </LinearLayout>

                <View
                        android:layout_marginStart="5dp"
                        android:layout_width="3dp"
                        android:textColor="#4F4F4F"
                        android:layout_height="match_parent"/>

                <LinearLayout
                        android:layout_weight="3"
                        android:minWidth="70dp"
                        android:layout_width="0dp"
                        android:paddingHorizontal="10dp"
                        android:gravity="center_vertical|start"
                        android:layout_height="match_parent">
                    <TextView
                            android:layout_width="wrap_content"
                            android:textColor="#4F4F4F"
                            android:text="@string/add_image"
                            android:layout_marginEnd="4dp"
                            android:layout_height="wrap_content"/>

                    <ImageView
                            android:id="@+id/image1"
                            android:layout_width="40dp"
                            android:layout_marginEnd="6dp"
                            android:backgroundTint="#000"
                            android:background="@drawable/select_image_button_background"
                            android:layout_height="40dp"/>

                    <ImageView
                            android:id="@+id/image2"
                            android:layout_width="40dp"
                            android:backgroundTint="#000"
                            android:background="@drawable/select_image_button_background"
                            android:layout_marginEnd="3dp"
                            android:layout_height="40dp"/>
                </LinearLayout>
                <View
                        android:layout_marginEnd="5dp"
                        android:layout_width="3dp"
                        android:textColor="#4F4F4F"
                        android:layout_height="match_parent"
                />
                <LinearLayout
                        android:minWidth="85dp"
                        android:layout_weight="3"
                        android:layout_width="0dp"
                        android:paddingEnd="10dp"
                        android:gravity="center_vertical"
                        android:layout_height="match_parent">
                    <TextView
                            android:layout_width="wrap_content"
                            android:text="@string/gps"
                            android:textColor="#4F4F4F"
                            android:layout_marginEnd="7dp"
                            android:layout_marginStart="5dp"
                            android:layout_height="19dp"/>
                    <TextView
                            android:id="@+id/textLocation"
                            android:layout_width="wrap_content"
                            android:maxLines="2"
                            android:textColor="#4F4F4F"
                            android:text="23.222222°N - 22.222222°E"
                            android:layout_height="wrap_content"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_height="wrap_content">
                <TextView
                        android:layout_width="120dp"
                        android:text="@string/what_survey_and_surveillance_is_required"
                        android:layout_height="wrap_content"
                        android:textColor="#4F4F4F"/>
                <HorizontalScrollView
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="match_parent">
                    <LinearLayout
                            android:gravity="center_vertical"
                            android:orientation="horizontal"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent">

                        <CheckBox
                                android:id="@+id/larvaSurvey"
                                android:layout_margin="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/lava_surveillance_at_village"/>

                        <CheckBox
                                android:id="@+id/waterSampleCollection"
                                android:layout_margin="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/water_sample_collection"/>

                        <CheckBox
                                android:id="@+id/iodineTest"
                                android:layout_margin="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/iodine_test"/>

                        <CheckBox
                                android:id="@+id/iecProgramme"
                                android:layout_margin="5dp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/iec_programme"/>

                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="10dp">
            </LinearLayout>
        </LinearLayout>
        <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#cacaca"/>
        <LinearLayout
                android:paddingBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">
            <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0000"
                    android:textColor="#646464"
                    android:text="@string/cancel"/>
            <Button
                    android:id="@+id/btnSave"
                    android:layout_width="120dp"
                    android:layout_marginHorizontal="10dp"
                    android:layout_height="30dp"
                    android:foreground="@drawable/saveicon"/>
        </LinearLayout>
    </LinearLayout>
</layout>