<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:context=".fragment.HouseholdMappingFragment">
    <data>
        <import type="android.view.View"/>
        <variable name="viewModel" type="com.ssf.homevisit.viewmodel.HouseHoldLevelMappingViewModel"/>
    </data>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <fragment
                android:id="@+id/map1"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        <LinearLayout
                android:id="@+id/status_dialog"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginStart="25dp"
                android:background="@drawable/village_summary_background"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:paddingBottom="10dp"
                android:orientation="vertical">
            <LinearLayout
                    android:id="@+id/back_button"
                    android:layout_margin="15dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <ImageView
                        android:src="@drawable/back_arrow"
                        android:backgroundTint="@color/white"
                        android:layout_width="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/back_arrow"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="#0084FF"
                        android:text="@string/back"
                />
            </LinearLayout>
            <View
                    android:layout_marginHorizontal="15dp"
                    android:foreground="#e0e0e0"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"/>

            <TextView
                    android:layout_marginStart="15dp"
                    android:layout_marginVertical="5dp"
                    android:id="@+id/phc_name_text"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:text="@={viewModel.phcName}"
                    android:textColorHint="@color/black"
                    android:layout_width="wrap_content"
                    android:hint="@string/public_health_center_name"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginStart="15dp"
                    android:layout_marginVertical="5dp"
                    android:id="@+id/subcenter_text"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textColorHint="@color/black"
                    android:text="@={viewModel.subCenterName}"
                    android:layout_width="wrap_content"
                    android:hint="@string/subcenter_number_1"
                    android:layout_height="wrap_content"/>

            <TextView
                    android:layout_marginStart="15dp"
                    android:layout_marginVertical="5dp"
                    android:id="@+id/village_text"
                    android:textSize="20sp"
                    android:textColor="#333333"
                    android:textColorHint="#333333"
                    android:hint="@string/mayasandra"
                    android:text="@={viewModel.villageName}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <View
                    android:layout_marginVertical="10dp"
                    android:layout_marginHorizontal="15dp"
                    android:foreground="#e0e0e0"
                    android:layout_width="match_parent"
                    android:layout_height="3dp"/>
            <Button
                    android:id="@+id/show_complete_list_button"
                    android:layout_marginHorizontal="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAllCaps="false"
                    android:backgroundTint="#0084FF"
                    android:text="@string/show_completed_list"
            />
        </LinearLayout>
    </RelativeLayout>
</layout>